force-app/main/default/objects/Payee_Profile__c/Payee_Profile__c.object-meta.xml
<CustomObject>
    <label>Payee Profile</label>
    <nameField>
        <displayFormat>PPN-{0000}</displayFormat>
        <label>Payee Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payee Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>