force-app/main/default/objects/Payee_Profile__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <label>Speaker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payee Profiles</relationshipLabel>
    <relationshipName>Payee_Profiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>