force-app/main/default/objects/Payee_Profile__c/fields/Speaker_W9_Form__c.field-meta.xml
<CustomField>
    <fullName>Speaker_W9_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speaker W9 Form</label>
    <referenceTo>Speaker_W9_Form__c</referenceTo>
    <relationshipLabel>Payee Profiles</relationshipLabel>
    <relationshipName>Payee_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>