force-app/main/default/objects/Payee_Profile__c/fields/W9_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>W9_Expiration_Date__c</fullName>
    <formula>Speaker_W9_Form__r.Form_Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>W9 Expiration Date</label>
    <type>Date</type>
</CustomField>